adding gitignore file

--- a/views/index.html
+++ b/views/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 
 <head>
-    <title>Nodejs Backend using MongoDB</title>
+    <title>Social Media Backend</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="css/style.css" rel="stylesheet">
 </head>
 
 <body>
-    <h1>Nodejs Backend using MongoDB</h1>
+    <h1>Social Media Backend!!</h1>
 </body>
 
 </html>
